Adding 2 mixins for existed enchantments: Infinity and Silk Touch. Adding new Enchantment Called: Luck of the Snow

--- a/src/main/resources/assets/goofyenchants/lang/en_us.json
+++ b/src/main/resources/assets/goofyenchants/lang/en_us.json
@@ -3,6 +3,7 @@
 
   "itemGroup.geEnchantedBooks": "GoofyEnchants",
 
+  "enchantment.goofyenchants.uno_reverse": "UNO",
   "enchantment.goofyenchants.big": "Khổng lồ hoá",
   "enchantment.goofyenchants.small": "Khổng lồ tí hon",
   "enchantment.goofyenchants.luck_of_the_snow": "Luck of the Snow",
