SmeltingTouchEnchantment & Enhancement to Enchantment Handlers

--- a/src/main/resources/assets/goofyenchants/lang/vi_vn.json
+++ b/src/main/resources/assets/goofyenchants/lang/vi_vn.json
@@ -3,11 +3,13 @@
   "item.goofyenchants.uno_reverse": "Thẻ UNO© Reverse",
   "enchantment.goofyenchants.uno_reverse": "UNO© Reverse",
   "enchantment.goofyenchants.big": "Khổng lồ hoá",
-  "enchantment.goofyenchants.small": "Khổng lồ tí hon",
+  "enchantment.goofyenchants.small": "Nhỏ mà có võ",
   "enchantment.goofyenchants.disloyalty": "Lòng đéo trung thành",
-  "enchantment.goofyenchants.randomness": "Gacha",
-  "enchantment.goofyenchants.uno_reverse.desc" : "Phản sát thương khi chặn bằng khiên",
+  "enchantment.goofyenchants.randomness": "Hộp Pandora",
+  "enchantment.goofyenchants.smelting_touch": "Tái Hiện Thánh Quang",
+  "enchantment.goofyenchants.uno_reverse.desc": "Phản sát thương khi chặn bằng khiên",
   "enchantment.goofyenchants.big.desc": "Hoá to khi mặc mũ có cường hoá này",
   "enchantment.goofyenchants.small.desc": "Hoá nhỏ khi mặc mũ có cường hoá này",
-  "enchantment.goofyenchants.randomness.desc": "Tỉ lệ rớt vật phẩm ngẫu nhiên mỗi khi đập khối"
+  "enchantment.goofyenchants.randomness.desc": "Tỉ lệ rớt vật phẩm ngẫu nhiên mỗi khi đập khối",
+  "enchantment.goofyenchants.smelting_touch.desc": "Tự động nung khối đã đào"
 }
