--- a/src/main/resources/assets/goofyenchants/lang/en_US.json
+++ b/src/main/resources/assets/goofyenchants/lang/en_US.json
@@ -1,11 +1,15 @@
 {
   "goofyenchants.title": "Goofy Enchantments",
-  "itemGroup.geEnchantedBooks": "Goofy Enchantments",
+  "item.goofyenchants.uno_reverse": "UNO© Reverse Card",
+  "enchantment.goofyenchants.uno_reverse": "UNO© Reverse",
   "enchantment.goofyenchants.big": "Tiny Titans",
   "enchantment.goofyenchants.small": "Tiny but Deadly",
   "enchantment.goofyenchants.disloyalty": "Disloyalty",
-  "enchantment.goofyenchants.randomness": "Gacha",
+  "enchantment.goofyenchants.randomness": "Pandora's box",
+  "enchantment.goofyenchants.smelting_touch": "Smelting Touch",
+  "enchantment.goofyenchants.uno_reverse.desc": "Reflects damage when blocking with a shield",
   "enchantment.goofyenchants.big.desc": "Turns into a giant when wearing a helmet with this enchantment",
   "enchantment.goofyenchants.small.desc": "Turns into an ant when wearing a helmet with this enchantment",
-  "enchantment.goofyenchants.randomness.desc": "Chance to drop random items when breaking a block"
+  "enchantment.goofyenchants.randomness.desc": "Chance to drop random items when breaking a block",
+  "enchantment.goofyenchants.smelting_touch.desc": "Automatically smelts mined blocks"
 }
