Changed Randomness Curse to be Randomness Enchantment

--- a/src/main/resources/assets/goofyenchants/lang/en_us.json
+++ b/src/main/resources/assets/goofyenchants/lang/en_us.json
@@ -5,12 +5,15 @@
   "enchantment.goofyenchants.big": "Tiny Titans",
   "enchantment.goofyenchants.small": "Tiny but Deadly",
   "enchantment.goofyenchants.disloyalty": "Disloyalty",
+  "enchantment.goofyenchants.swappiness": "Band of Thieves",
   "enchantment.goofyenchants.randomness": "Pandora's box",
   "enchantment.goofyenchants.smelting_touch": "Smelting Touch",
   "enchantment.goofyenchants.combustion": "Lucky Ricochet",
   "enchantment.goofyenchants.uno_reverse.desc": "Reflects damage when blocking with a shield",
   "enchantment.goofyenchants.big.desc": "Turns into a giant when wearing a helmet with this enchantment",
   "enchantment.goofyenchants.small.desc": "Turns into an ant when wearing a helmet with this enchantment",
+  "enchantment.goofyenchants.disloyalty.desc": "Trident returning now damages the owner",
+  "enchantment.goofyenchants.swappiness.desc": "Chance to swap item with enemies when attacking",
   "enchantment.goofyenchants.randomness.desc": "Chance to drop random items when breaking a block",
   "enchantment.goofyenchants.smelting_touch.desc": "Automatically smelts mined blocks",
   "enchantment.goofyenchants.combustion.desc": "Arrows have a chance of exploding when hitting an enemy"
