--- a/src/main/resources/assets/goofyenchants/lang/vi_vn.json
+++ b/src/main/resources/assets/goofyenchants/lang/vi_vn.json
@@ -5,12 +5,15 @@
   "enchantment.goofyenchants.big": "Khổng lồ hoá",
   "enchantment.goofyenchants.small": "Nhỏ mà có võ",
   "enchantment.goofyenchants.disloyalty": "Lòng đéo trung thành",
+  "enchantment.goofyenchants.swappiness": "Băng trộm",
   "enchantment.goofyenchants.randomness": "Hộp Pandora",
   "enchantment.goofyenchants.smelting_touch": "Tái hiện thánh quang",
   "enchantment.goofyenchants.combustion": "Bật nảy may mắn",
   "enchantment.goofyenchants.uno_reverse.desc": "Phản sát thương khi chặn bằng khiên",
   "enchantment.goofyenchants.big.desc": "Hoá to khi mặc mũ có cường hoá này",
   "enchantment.goofyenchants.small.desc": "Hoá nhỏ khi mặc mũ có cường hoá này",
+  "enchantment.goofyenchants.disloyalty.desc": "Trident khi bay về sẽ gây sát thương cho chủ nhân",
+  "enchantment.goofyenchants.swappiness.desc": "Ngẫu nhiên đổi vật phẩm với kẻ địch khi tấn công",
   "enchantment.goofyenchants.randomness.desc": "Tỉ lệ rớt vật phẩm ngẫu nhiên mỗi khi đập khối",
   "enchantment.goofyenchants.smelting_touch.desc": "Tự động nung khối đã đào",
   "enchantment.goofyenchants.combustion.desc": "Mũi tên có tỉ lệ phát nổ khi trúng mục tiêu"
