Improvements to the MultiShotBowHandler

--- a/src/main/resources/assets/goofyenchants/lang/en_us.json
+++ b/src/main/resources/assets/goofyenchants/lang/en_us.json
@@ -6,8 +6,8 @@
   "enchantment.goofyenchants.small": "Tiny but Deadly",
   "enchantment.goofyenchants.disloyalty": "Disloyalty",
   "enchantment.goofyenchants.swappiness": "Band of Thieves",
-  "enchantment.goofyenchants.randomness": "Pandora's box",
-  "enchantment.goofyenchants.smelting_touch": "Smelting Touch",
+  "enchantment.goofyenchants.randomness": "Trash to Treasure",
+  "enchantment.goofyenchants.smelting_touch": "Radiant Refactor",
   "enchantment.goofyenchants.combustion": "Lucky Ricochet",
   "enchantment.goofyenchants.uno_reverse.desc": "Reflects damage when blocking with a shield",
   "enchantment.goofyenchants.big.desc": "Turns into a giant when wearing a helmet with this enchantment",
