--- a/src/main/resources/assets/goofyenchants/lang/vi_vn.json
+++ b/src/main/resources/assets/goofyenchants/lang/vi_vn.json
@@ -6,7 +6,7 @@
   "enchantment.goofyenchants.small": "Nhỏ mà có võ",
   "enchantment.goofyenchants.disloyalty": "Lòng đéo trung thành",
   "enchantment.goofyenchants.swappiness": "Băng trộm",
-  "enchantment.goofyenchants.randomness": "Hộp Pandora",
+  "enchantment.goofyenchants.randomness": "Phế vật thành báu vật",
   "enchantment.goofyenchants.smelting_touch": "Tái hiện thánh quang",
   "enchantment.goofyenchants.combustion": "Bật nảy may mắn",
   "enchantment.goofyenchants.uno_reverse.desc": "Phản sát thương khi chặn bằng khiên",
