Improvements to the InnerConscience Curse

--- a/src/main/resources/assets/goofyenchants/lang/en_us.json
+++ b/src/main/resources/assets/goofyenchants/lang/en_us.json
@@ -20,6 +20,15 @@
   "enchantment.goofyenchants.combustion.desc": "Arrows have a chance of exploding when hitting an enemy",
   "sounds.goofyenchants.uno_reverse_use": "UNO© Reversed",
   "sounds.goofyenchants.huy_ngoc_do_singing": "Huy Ngoc Do Singing",
-  "sounds.goofyenchants.yeat_being_real": "If We Being Rëal",
-  "sounds.goofyenchants.soi_ech_everynight": "Soi ếch e rì nai ai ài ồ ái ai ài"
+  "sounds.goofyenchants.soi_ech_everynight": "Soi ech everynightttt",
+  "sounds.goofyenchants.free_fire": "U have Free Fire© ?",
+  "sounds.goofyenchants.het_xuong_can_gio": "No need anyone else",
+  "sounds.goofyenchants.het_xang_can_so": "I stand alone in the rain",
+  "sounds.goofyenchants.ai_cung_du_thua": "Everyone is redundant",
+  "sounds.goofyenchants.vinflow": "Vinflow",
+  "sounds.goofyenchants.dang_long_bien": "Realizing I'm in Ba Dinh district",
+  "sounds.goofyenchants.quan_ao_2hand": "2nd hand clothes",
+  "sounds.goofyenchants.vit_quay_lang_son": "Duck spinning in Lang Son",
+  "sounds.goofyenchants.tsmt": "TSMT",
+  "sounds.goofyenchants.pho_tai": "Medium rare beef Pho"
 }
