--- a/src/main/resources/assets/goofyenchants/lang/vi_vn.json
+++ b/src/main/resources/assets/goofyenchants/lang/vi_vn.json
@@ -20,6 +20,15 @@
   "enchantment.goofyenchants.combustion.desc": "Mũi tên có tỉ lệ phát nổ khi trúng mục tiêu",
   "sounds.goofyenchants.uno_reverse_use": "Ai đó bị UNO© Reverse",
   "sounds.goofyenchants.huy_ngoc_do_singing": "Huỹ Ngọc Đô đang hát",
-  "sounds.goofyenchants.yeat_being_real": "If We Being Rëal",
-  "sounds.goofyenchants.soi_ech_everynight": "Soi ếch e rì nai ai ài ồ ái ai ài"
+  "sounds.goofyenchants.soi_ech_everynight": "Soi ếch e rì nai ai ài ồ ái ai ài",
+  "sounds.goofyenchants.free_fire": "Máy chú có Free Fire© hog?",
+  "sounds.goofyenchants.het_xuong_can_gio": "Chẳng cần một ai nữa",
+  "sounds.goofyenchants.het_xang_can_so": "Một mình anh đứng dưới mưa",
+  "sounds.goofyenchants.ai_cung_du_thua": "Bất kể ai cũng dư thừa",
+  "sounds.goofyenchants.vinflow": "Vinflow",
+  "sounds.goofyenchants.dang_long_bien": "Nhận ra mình đang ở quận Ba Đình",
+  "sounds.goofyenchants.quan_ao_2hand": "Bật chế độ bay lên bay lên quần áo 2hand",
+  "sounds.goofyenchants.vit_quay_lang_son": "Mịt mù Vịt quay Lạng Sơn",
+  "sounds.goofyenchants.tsmt": "TSMT",
+  "sounds.goofyenchants.pho_tai": "Phở tái"
 }
